plugins {
	id "java-library"

	id "checkstyle"
}

group = "org.hibernate.orm9"
version = "1.0.0-SNAPSHOT"

dependencies {
	implementation libs.hibernateOrm
	implementation libs.hibernateModels
	implementation libs.logging

	compileOnly libs.checkerFramework
	compileOnly libs.loggingAnnotations

	annotationProcessor libs.loggingProcessor
	annotationProcessor libs.logging
	annotationProcessor libs.loggingAnnotations

	testImplementation libs.junitJupiterApi
	testImplementation libs.assertj
	testImplementation libs.hibernateTesting

	testRuntimeOnly libs.junitJupiterEngine
	testRuntimeOnly libs.h2
}

java {
	sourceCompatibility = 17
	targetCompatibility = 17
}

test {
	useJUnitPlatform()
}

tasks.withType( JavaCompile ).configureEach {
	options.encoding = "UTF-8"
	options.warnings false
}

// create a single "compile" task
tasks.register( "compile" ) {compile->
	compile.dependsOn tasks.named( sourceSets.main.compileJavaTaskName )
	compile.dependsOn tasks.named( sourceSets.test.compileJavaTaskName )
}

checkstyle {
	sourceSets = [ project.sourceSets.main ]
	showViolations = false
}
// only include explicit sources (and thereby exclude generated sources)
tasks.checkstyleMain.source = 'src/main'
